Add jSpecify common.osgi packages.